--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@helia/core": "^0.0.0",
+    "@helia/unixfs": "^4.0.1",
+    "@multiformats/multiaddr": "^12.3.4",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ipfs-http-client": "^58.0.0",
     "mongodb": "^6.12.0",
     "pg": "^8.13.1",
     "web3": "^4.16.0"
