--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "proofofreserve_phase1",
   "version": "1.0.0",
+  "description": "Proof of Reserve Phase 1 - Blockchain-based PoR solution",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node services/app.js",
+    "dev": "nodemon services/app.js",
+    "test": "mocha tests/**/*.js",
+    "lint": "eslint . --ext .js",
+    "pretest": "npm run lint"
   },
-  "keywords": [],
+  "keywords": [
+    "blockchain",
+    "proof-of-reserve",
+    "IPFS",
+    "Node.js"
+  ],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@helia/core": "^0.0.0",
     "@helia/unixfs": "^4.0.1",
@@ -21,5 +30,13 @@
     "mongodb": "^6.12.0",
     "pg": "^8.13.1",
     "web3": "^4.16.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "eslint": "^8.52.0",
+    "jest": "^29.7.0",
+    "mocha": "^10.0.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^7.0.0"
   }
 }
