--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node services/app.js",
     "dev": "nodemon services/app.js",
-    "test": "mocha tests/**/*.js",
+    "test": "jest",
     "lint": "eslint . --ext .js",
     "pretest": "npm run lint"
   },
