--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@multiformats/multiaddr": "^12.3.4",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
+    "ethers": "^6.13.4",
     "express": "^4.21.2",
     "ipfs-http-client": "^57.0.3",
     "jsonwebtoken": "^9.0.2",
